--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -8,92 +8,7 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
-
--   [Research Questions - June 2023](#research-questions---june-2023)
--   [Notes on structure](#notes-on-structure)
--   [Chapter Introduction](#chapter-introduction)
--   [Exploring issues and context from practitioner interviews and
-    existing
-    research](#exploring-issues-and-context-from-practitioner-interviews-and-existing-research)
--   [Short vignette illustrating shifts in scope of
-    activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
-    -   [Outline of Game Making Tools used in this
-        vignette](#outline-of-game-making-tools-used-in-this-vignette)
-        -   [Code Playgrounds](#code-playgrounds)
-    -   [Context of Vignette](#context-of-vignette)
-    -   [Disambiguating terminology - Conflicts, tensions,
-        contradictions,
-        dilemmas](#disambiguating-terminology---conflicts-tensions-contradictions-dilemmas)
-    -   [Description of the nested levels of activity & tools
-        used](#description-of-the-nested-levels-of-activity-tools-used)
-        -   [Environmental Factors and
-            Objectives](#environmental-factors-and-objectives)
-        -   [Shared larger objective - Making games for an
-            audience](#shared-larger-objective---making-games-for-an-audience)
-        -   [Smaller objective - Implementing game
-            elements](#smaller-objective---implementing-game-elements)
-    -   [Exploring game design patterns and germ cell of
-        activity](#exploring-game-design-patterns-and-germ-cell-of-activity)
--   [Summary of design evolution](#summary-of-design-evolution)
--   [Commentary on evolution of design by
-    Phase](#commentary-on-evolution-of-design-by-phase)
-    -   [P1 and P2: Explorations and
-        innovations](#p1-and-p2-explorations-and-innovations)
-    -   [P3 and P4: The main game making
-        programmes](#p3-and-p4-the-main-game-making-programmes)
-    -   [P5: Adapting to MakeCode Arcade and more formal
-        settings](#p5-adapting-to-makecode-arcade-and-more-formal-settings)
--   [Conflicts and design tensions experienced by participants and
-    facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
-    -   [Design tensions experienced as a researcher /
-        designer](#design-tensions-experienced-as-a-researcher-designer)
-        -   [Tensions surrounding authenticity of tool
-            use](#tensions-surrounding-authenticity-of-tool-use)
--   [The impact of the core tools of code playgrounds and templated
-    game](#the-impact-of-the-core-tools-of-code-playgrounds-and-templated-game)
-    -   [Code playground](#code-playground)
-    -   [Impact of the half-baked game
-        template](#impact-of-the-half-baked-game-template)
-        -   [Observations on design behaviours encouraged through use of
-            game
-            template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
-    -   [Discussion on Authenticity of
-        Tools](#discussion-on-authenticity-of-tools)
--   [Participant conflicts /
-    contractions](#participant-conflicts-contractions)
-    -   [1. Identity hardcore coding & disfunctional group work -
-        P1](#identity-hardcore-coding-disfunctional-group-work---p1)
-        -   [Navigating the conflict](#navigating-the-conflict)
-        -   [Discussion on Authenticity within this conflict and
-            playground as
-            resolution](#discussion-on-authenticity-within-this-conflict-and-playground-as-resolution)
-    -   [2. Participant conflict due to lack of relevant technical
-        support](#participant-conflict-due-to-lack-of-relevant-technical-support)
-        -   [Tensions and related to navigation of various
-            documentations
-            sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
-    -   [3. Facilitator conflict addressing the Play
-        Paradox](#facilitator-conflict-addressing-the-play-paradox)
-        -   [Using Physical Maps of Missions as Game Design Patterns -
-            COMPRESS](#using-physical-maps-of-missions-as-game-design-patterns---compress)
-        -   [Learning Dimensions Map](#learning-dimensions-map)
-        -   [NOTES ON TENSIONS WHICH THIS LEARNING MAP HAS POTENTIAL TO
-            ADDRESS](#notes-on-tensions-which-this-learning-map-has-potential-to-address)
-    -   [Resolving the conflict by discarding this
-        approach](#resolving-the-conflict-by-discarding-this-approach)
-        -   [Limits to the learning dimensions map in an informal
-            setting](#limits-to-the-learning-dimensions-map-in-an-informal-setting)
--   [Conclusion](#conclusion)
-    -   [Summary of barriers exposed in this
-        study](#summary-of-barriers-exposed-in-this-study)
-    -   [Discussion on the emergent (and mutual) nature of the design
-        (and reseach?)
-        process.](#discussion-on-the-emergent-and-mutual-nature-of-the-design-and-reseach-process.)
-    -   [Authentic tool use and instrumental
-        agency](#authentic-tool-use-and-instrumental-agency)
-        -   [Analysis in relatin to existing design heuristics of
-            toolsets](#analysis-in-relatin-to-existing-design-heuristics-of-toolsets)
-    -   [Link to next chapter](#link-to-next-chapter)
+It holds promise to generate resources more generally.
 
 ## Research Questions - June 2023
 
@@ -1194,7 +1109,7 @@ Extra missions which highlight game challenge and user experience may help learn
 
 Ultimately, I gave up on this approach as it did not align with the view of agency that I was trying to create in the learning environment.
 
-Unknowingly aligning with Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals, I put off introducing the learning map in to the informal design process. 
+Unknowingly aligning with Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals, I put off introducing the learning map in to the informal design process.
 
 
 #### Limits to the learning dimensions map in an informal setting
