work onlit for phaser

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -8,9 +8,7 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
--   [Notes on structure](#notes-on-structure)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Exploring issues and context from practitioner interviews and
     existing
@@ -102,7 +100,6 @@ title: 4. Exploration of the Formative Learning Design Process
             toolsets](#analysis-in-relatin-to-existing-design-heuristics-of-toolsets)
     -   [Link to next chapter](#link-to-next-chapter)
 
-
 ## Research Questions - June 2023
 
 1. What pedagogical tools and processes are available to support novices to overcome barriers to game coding and design?
@@ -111,23 +108,17 @@ title: 4. Exploration of the Formative Learning Design Process
 3. How can game design patterns support the development of coding practices with novices?
 
 
-## Notes on structure
+<!-- ## Notes on structure -->
 <!-- NOTE:
 Moved impact of software tools here - and overall on templated approach on a micro level  -  which therefore becomes less of this study's focus - and needs less evidence -->
 
-- drawing mostly on my journal notes and the evolution of the tools and design themselves.  
+<!-- - drawing mostly on my journal notes and the evolution of the tools and design themselves.   -->
 
-- **Interviews (and Lit review ):** exposes motivations and barriers to undertaking activity  this domain from interviews with peer practitioners and literature review
+<!-- - **Interviews (and Lit review ):** exposes motivations and barriers to undertaking activity  this domain from interviews with peer practitioners and literature review -->
 
-- gives an overview of the evolution of the learning design
+<!-- However in terms of tensions - there is one on cultural tensions - this may need moving to the next chapter - a more thematic approach. -->
 
-- draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
-
-However in terms of tensions - there is one on cultural tensions - this may need moving to the next chapter - a more thematic approach.
-
-This chapter has a particular focus on the tools and authenticity in relation to other tools. This focus develops a thread of theoretical inquiry around the impact of authenticity of tools and processes in activity systems of learners experiences of activity systems and particular on building agency in
-
-Also the practitioner interviews - could be a bit disjointed - as they do relate to cultural barriers and tactics. But could say those are explored in other chapters. DONE
+<!-- Also the practitioner interviews - could be a bit disjointed - as they do relate to cultural barriers and tactics. But could say those are explored in other chapters. DONE -->
 
 
 ## Chapter Introduction  
@@ -135,11 +126,14 @@ Also the practitioner interviews - could be a bit disjointed - as they do relate
 This chapter
 
 - exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review)
+- Introduces the use of design patterns and collections of patterns, as the germ cell of activity which then expands in different directions.
 - gives an overview of the evolution of the key pedagogical features of the learning design used in the research process
 - draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
-- explores 2 key conflicts using the terminology of Saninno in TADS
+- outlines 3 key conflicts using the terminology of Saninno in TADS
 - Presents a synthesis to initial barriers (and) tactics to overcome them
-- Introduces the use of design patterns and collections of patterns, as the germ cell of activity which then expands in different directions.
+
+This chapter has a particular focus on the tools and authenticity in relation to other tools. This focus develops a thread of theoretical inquiry around the impact of authenticity of tools and processes in activity systems of learners experiences of activity systems and particular on building agency in
+
 
 Due to the novel nature of the learning design the detailed outline of the specifics of the participants experience of the design are important to situate findings in the following two chapters.
 
@@ -203,7 +197,7 @@ The themes that emerged above.
 One key issue is the clash of cultures. EDIT DOWN AND COMMENT
 
 
-    There's this idea of a clash of cultures where to learn like the dominant school culture, you have to release some of your self-identity or you need to learn to bridge these worlds. And I think at least in the writing, the literature, that there's this resistance of seeing yourself as someone who does  STEM, as someone who does computer science. It's like we're not people that do that. And I think by doing it with their family, like there's no better way to kind of mitigate that effect and that hesitation, that barrier, because they're all becoming your whole family, like your, your closest identity is becoming people that write code or people that make robots.
+    There's this idea of a clash of cultures where to learn like the dominant school culture, you have to release some of your self-identity or you need to learn to bridge these worlds. ... (in) the literature, that there's this resistance of seeing yourself as someone who does STEM, as someone who does computer science. It's like we're not people that do that. And I think by doing it with their family, like there's no better way to kind of mitigate that effect and that hesitation, that barrier, because they're all becoming your whole family, like your, your closest identity is becoming people that write code or people that make robots.
 
 This interview references research already explored in the literature review concerning identity and alienation from STEM contexts.  
 
@@ -222,9 +216,7 @@ The kinds of exhibits which invite extended play are of interest to this study. 
 -->
 
 <!-- **Cultural influences on my choice of learning design**
-
 NOTE - MOVE TO INTRO  - NO NEED
-
 
 I set up the working pattern based on my professional experiences and my own academic and cultural interests. As mentioned in the introduction, DIY culture, remix culture, repair culture, TAZ events are strong influences to the learning design based on the ideals of an autonomous community.
 
@@ -672,18 +664,6 @@ PBL is adapted to schools in many settings thus, authenticity is "on a scale" in
 
 
 **Key message: authentic tools and processes can increase agency but facilitators should use them with careful curation - as there are negative effects too**
-
-
-Javascript as coding language, Phaser as a game making framework and Glitch as a code environment, are highly authentic and used by both professional coders and enthusiasts alike. A Mozilla white paper [@mozilla_foundation_webmaker_2014] outlines the power of exploring web technology as an empowering activity. My own work in this area has been informed by work developing teaching materials for the Mozilla Foundation as part of the Teach the Web programme.
-
- <!-- This programme introduced a broad set of competencies name Web Literacies including; digital literacy
-- web literacy - narrower
-- webmaker - and more specific affordances of key web based coding and exploring tools -->
-
-
-Javascript is an authentic language, core to modern web pages and applications. Phaser is a professional and enthusiast framework. Glitch is a code playground which while used for learning and which was chosen by Mozilla as a replacement tool for the education focused Thimble, is also used by professionals. In the early selection of tools the use of a framework based on javascript and web technology is driven by authenticity and thus an ability . My work on teach the web for Mozilla was motivated in part in the extensibility of this choice of language which can be compared to block based environments or game specific making tools like game-star mechanics.
-
-Phaser is a javascript framework embedded in html page. Unlike many game making tools this tools set can be extended to other kinds of projects and is a professional and foundational toolset used to build the majority of websites and many phone applications.
 
 
 <!-- - audience
