recommit germ cell element

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -477,11 +477,11 @@ NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and 
 
 ### Exploring game design patterns and germ cell of activity
 
-Proposed new location to first introduce this idea.
+NOTE - Proposed new location to first introduce this idea.  Evaluate
 
-P1 was chaotic, but yielded this way of working. Proposed new features, some where held in common with other groups.
+P1 working practices yielded new ways of working and resources. Key elements including working form a template, goal setting around implementing new features, some where held in common with other groups.
 
-In keeping germ cell concept from Engestrom etc, other forms of activity evolved from this core idea.
+Explain - Unit of analysis for upcoming chapters.
 
 The small, quick start activities used to kick start activity  game makers were an evolution from  the full process of adding a game pattner. The proposed code modification instead of new code structures accelerated the process.
 
