--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -514,16 +514,15 @@ https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/
 
 | **Phase, Name and Date**| **Description** | **Starting Resources**         
 |--------|------------|--------------|
-|P1: Oct 2017 - Mar 2018; Experimental Course  | Participants started with a blank canvas and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. A minimal incomplete starting game code template was introduced to support students after the course has started.  |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools  |
-| P2: May 2018 - Dec 2018; Resource Development Stage | One-off workshops at Mozilla and Feral Vector conferences and to PGCE computer students helped focus and the creation of a “half baked” game template and supporting online and printable resources.  |  Phaser; Glitch code playground; quick start cards; incomplete game template |
-| P3: Jan - Feb 2019; Glitch Game Club | First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve. |  Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples  |
-| P4: May 2019; Glitch Game Club 2| Second iteration of game making course with additional drama and reflective elements |  As per P3; drama scenario; interactive chat page in glitch  |
-| P5: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   |
+|P1: Oct 2017 - Dec 2018; Experimental Course  | Participants started with a blank canvas and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. A minimal incomplete starting game code template was introduced to support students after the course has started.  Then One-off workshops at Mozilla and Feral Vector conferences and to PGCE computer students and the creation of a “half baked” game template |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools  |
+| P2: Jan - Feb 2019; Glitch Game Club | First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve. |  Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples  |
+| P3: May 2019; Glitch Game Club 2| Second iteration of game making course with additional drama and reflective elements |  As per P3; drama scenario; interactive chat page in glitch  |
+| P4: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   |
 
 
 ## Commentary on evolution of design by Phase
 
-### P1 and P2: Explorations and innovations
+### P1: Explorations and innovations
 
 <!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
 <!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
@@ -599,7 +598,7 @@ The use of blank, coloured blocks of 32 x 32 pixels encouraged participants to c
 PERHAPS REPLACE THIS WITH SCREEN SHOT OF PISKEL AS A TOOL
 ![](./Pictures/whale_1.png){width=50%}
 
-The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax.
+The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using   code syntax.
 
 **Incomplete graphical blocks & Piskel**
 
@@ -610,17 +609,18 @@ The concept of the feel of the game or the challenges maps to the Dynamics of MD
  -->
 
 
-### P3 and P4: The main game making programmes
+### P2: The game making using suggested patterns.
 
 By P3 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the supporting resources that stemmed from participant feedback and detailed reading of relevant literature.
 
 One key addition brought to start of P3 was a more coherent list of tutorials and code examples illustrating key game features that had been requested by participants. These were presented in a web page together with the starting template as a collection of game design patterns.
 
-P4 used the same toolset as P3 however in addition, drew on my previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give an external motivation and narrative to the creation of games using for a fictional audience of visiting aliens.
+### P3 adding a process drama
+P3 used the same toolset as P2 however in addition, drew on my previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give an external motivation and narrative to the creation of games using for a fictional audience of visiting aliens.
 
 The participant activity of these stages and tensions between system elements are discussed in detail in the remainder of this chapter and in following chapters.
 
-### P5: Adapting to MakeCode Arcade and more formal settings
+### P4: Adapting to MakeCode Arcade and more formal settings
 
 I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade tool. MakeCode Arcade uses block language system. The template, resources and facilitation approach was based that of P3 and P4.
 
