SOME TO LIT REVIEW?

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -627,8 +627,6 @@ I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade to
 I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map. This is explored in a later section of this chapter.
 
 
-
-
 ## Conflicts and design tensions experienced by participants and facilitator/s
 
 <!-- As outlined in the table above I carried out four stages of workshops and development with home educator families. I will outline decisions behind the design activities at key stage of activity   -->
@@ -648,7 +646,7 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 
 
 
-### Design tensions experienced as a researcher / designer
+### Design tensions experienced as a researcher / designer - HOW MUCH TO MOVE TO IN LIT REVIEW? 
 
 In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways.
 
