Move intro to authenticity of tool use to lit review

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -646,38 +646,14 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 
 
 
-### Design tensions experienced as a researcher / designer - HOW MUCH TO MOVE TO IN LIT REVIEW? 
+### Design tensions experienced as a researcher / designer - HOW MUCH TO MOVE TO IN LIT REVIEW?
 
 In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways.
 
 This section is written from my own perspectives to inform discussion on design tensions. The process here is driven not only from user feedback but also on a more intuitive experience as an experienced facilitator in this field. I also draw on the tensions explored in the previous exploration of fellow participants. I  focus on tensions involving authenticity as a precursor to exploring their relationship with participation experience of agency.
 
-#### Tensions surrounding authenticity of tool use
 
-Rainer, Bolton and other practitioner-researchers agree on the potential and value of exploring other subject matter - e.g.  literacy, maths, science and history -  and undertaking authentic project work within a drama frame [-@rainer_drama_2012].
-
-This authenticity has several relevant dimensions in this study including: audience; toolset; and supportive processes / documentation. This section explores the these dimensions of authenticity and the resulting relationships with agency of the learners.
-
-PBL is adapted to schools in many settings thus, authenticity is "on a scale" in PBL  The concept of an authentic-as-possible project is a key tool for educators to support game making via project based learning [find support]. One advatange of working with digital tools is that if issues of complexity and cost can be addressed access to laptops and the internet allow learners to use very similar production tools to professionals.
-
-
-**Key message: authentic tools and processes can increase agency but facilitators should use them with careful curation - as there are negative effects too**
-
-
-<!-- - audience
-- tools
-- processes (professional and peers ?)
-- shared concepts - link to GDPs as a big one -->
-  <!-- An unusual approach so why?
-  - involvement with mozilla / teach the web
-  - authenticity - link between developer community and education, global in scope
-  - can use a cut and paste, remix, irreverant approach - link to media activist / hacktivist pirate cultures.
-  other unexpected Benefits
-  - could bring in other web creation resource, piskel, -->
-
-Research on project based learning using technology supports the motivational and inspirational factors of authentic tools in the fields of STEM computing [@garneli_computing_2015-1; @humble_use_nodate], media making and STEM in general. [IF SO FIND THIS ]
-
-<!-- The inspirational factor of _lifting the lid_ was reflected in a conversation among participants communicating a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game. -->
+#### My analysis and concerns around authenticity in choice of toolset
 
 In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed.
 
@@ -687,7 +663,11 @@ The use of code playgrounds mirrors that of professionals. The process of creati
 
 While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches [].
 
+- Why not Scratch
+- Choice of Thimble initially
+- lack of mature community
 
+NOTE - RETURN TO THIS LATER IN LARGER CONFLICT OVER TOOL USE - HOW TO SET THIS UP?
 
 ## Participant conflicts / contractions
 
