--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -655,6 +655,8 @@ This section is written from my own perspectives to inform discussion on design 
 
 #### My analysis and concerns around authenticity in choice of toolset
 
+As explored in the literature review, -INCLUDE SUMMARY -
+
 In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed.
 
 However, in terms of complexity of tools use, careful shepherding is involved to screen participants from overly complex processes and tools.
