Note - reduce focus on designers tensions in Ch.4

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -646,7 +646,7 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 
 
 
-### Design tensions experienced as a researcher / designer - HOW MUCH TO MOVE TO IN LIT REVIEW?
+### Design tensions experienced as a researcher / designer - HOW MUCH TO REFOCUS ON LARGER CONFLICTS - REDUCE THIS DOWN - CHECK THE FOCUS AND NEED FOR THIS SECTION?
 
 In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways.
 
